092824 edited linear alg posts and calc 2 surface area 092924 edited problem component to include images and formulas now but katex font is just not looking good on my site nor the size and idk how to change the size using katex{ blah blah blah} that I found on reddit. I'm using a cdn link to the min css file so idk ill have to figure that out. Also added IBP problems in calc2 but u sub calc 2 probs now are not numbered bc i havent rewritten the components. also cant seem to click on links anymore?? 093024 fixed the links turns out the stepping out of screen message was still physically there despite not being visible and that's what i was selecting the entire time whoops

--- a/src/styles/fadeIn.css
+++ b/src/styles/fadeIn.css
@@ -1,6 +1,6 @@
 .fade-in-section {
   opacity: 0; /* Initially hidden but still being able to ctrl+f the words.*/ 
-  transform: translateY(20vh);
+  transform: translateY(3vh); /*i liked 20 vh but needs to be small so it  doesnt overlap with mardown headings since the F component does not work on those*/
   transition: opacity 0.6s ease-out, transform 1.2s ease-out;
 }
 
